unpackaged/main/default/objects/DocuSign_Template__c/DocuSign_Template__c.object-meta.xml
<CustomObject>
    <description>Adding DocuSign Templates to the Originate</description>
    <label>DocuSign Template</label>
    <nameField>
        <label>DocuSign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>