unpackaged/main/default/objects/DocuSign_Template__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Mapping Investor to the DocuSign Template</description>
    <inlineHelpText>Mapping Investor to the DocuSign Template</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Templates</relationshipLabel>
    <relationshipName>DocuSign_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>