unpackaged/main/default/objects/DocuSign_Template__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Category</label>
    <referenceTo>genesis__Document_Category__c</referenceTo>
    <relationshipLabel>DocuSign Templates</relationshipLabel>
    <relationshipName>DocuSign_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>