unpackaged/main/default/objects/DocuSign_Template__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Templates change based on State Investor</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>