unpackaged/main/default/objects/DocuSign_Template__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>DocuSign Template Id</description>
    <inlineHelpText>DocuSign TemplateId</inlineHelpText>
    <label>Template Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>